--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,13 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
-    implementation platform('org.springframework.boot:spring-boot-dependencies:3.4.2')
+    implementation platform('org.springframework.boot:spring-boot-dependencies:3.4.8')
+    implementation("org.apache.commons:commons-text:1.14.0")
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.48.0.0'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.12.1'
-    implementation group: 'net.dv8tion', name: 'JDA', version: '5.3.0'
+    implementation group: 'net.dv8tion', name: 'JDA', version: '5.6.1'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.13.0'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
